<resources>
    <string name="app_name">GameProject</string>
    <string name="oyun_adi">TAŞ-KAĞIT-MAKAS</string>
    <string name="welcome">Welcome!</string>
    <string name="next">NEXT</string>
    <string name="play">PLAY</string>
    <string name="start">START!</string>
    <string name="mrComputer">MR COMPUTER</string>
    <string name="ME">ME</string>
    <string name="score">Score</string>
    <string name="save">SAVE</string>
    <string name="username">Username..</string>
    <string name="fillUsername">Fill the username field!</string>
    <string name="welcomeUser">Welcome</string>
</resources>