<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/background_image">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oyun_adi"
        android:textSize="42sp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:lines="1"
        android:textColor="@color/purple_2"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/sports_esports"
        app:tint="@color/base_purple"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@color/green_1"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/buttonNextXml"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/next"
        android:textColor="@color/green_1"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="60dp"
        android:backgroundTint="@color/base_purple"/>

</LinearLayout>