<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mrComputer"
            android:textSize="24sp"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_2"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/imageMrComputer"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/rock" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WINNER"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/green_1"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_up"
        android:layout_gravity="center"
        android:visibility="visible"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green_1"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_down"
        android:layout_gravity="center"
        android:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WINNER"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/green_1"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ME"
            android:textSize="24sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp">

                <View
                    android:id="@+id/viewRock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/imageRock"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/rock" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp">

                <View
                    android:id="@+id/viewPaper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/imagePaper"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/paper" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center">

                <View
                    android:id="@+id/viewScissors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/imageScissors"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/scissors" />

            </RelativeLayout>




        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="40dp"/>




    </LinearLayout>

</LinearLayout>